feat: Add search by pushing enter key
Add search by pushing enter key